fix gap bug

--- a/assets/styles/sass/home.scss
+++ b/assets/styles/sass/home.scss
@@ -16,16 +16,23 @@ body {
 .container {
     max-width: 1124px;
     height: 100vh;
+    padding: 1rem 0;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 25% 50% 25%;
+    grid-template-columns: calc(25% - 16px) calc(50% - 16px) calc(25% - 16px);
+    place-content: center;
     gap: 16px;
     background-color: rgba(0,0,0,.5);
 
+    .todo-list {
+        background-color: black;
+    }
+    
     .search {
         .quick-access {
             display: grid;
-            grid-template-columns: repeat(auto-fill, calc(100% / 6));
+            grid-template-columns: repeat(auto-fill, calc((100% / 6) - 10px));
+            gap: 10px;
             align-content: start;
             place-content: center;
             background-color: aqua;
@@ -44,15 +51,7 @@ body {
     }
     
     div {
-        &:first-child {
-            background-color: red;
-        }
-        &:nth-child(2) {
-            background-color: olive;
-        }
-        &:last-child {
-            background-color: blue;
-        }
+        background-color: white;
     }
 }
 
